File io save file to internal and external storage

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,6 +143,7 @@
                     android:autofillHints=""
                     android:background="@drawable/bg"
                     android:ems="10"
+                    android:enabled="false"
                     android:hint="@string/name"
                     android:inputType="textPersonName"
                     android:paddingStart="10dp"
@@ -174,7 +175,7 @@
                 android:textColor="@color/white" />
 
             <Button
-                android:id="@+id/btn_result"
+                android:id="@+id/btnNav"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
