--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,39 @@
                     android:background="@drawable/bg"
                     android:backgroundTint="@color/purple_200"
                     android:text="@string/gravity" />
+
+                <Button
+                    android:id="@+id/button7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginEnd="26dp"
+                    android:background="@drawable/bg"
+                    android:backgroundTint="@color/purple_200"
+                    android:text="@string/lifecycle" />
+
+                <Button
+                    android:id="@+id/button8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginEnd="26dp"
+                    android:background="@drawable/bg"
+                    android:backgroundTint="@color/purple_200"
+                    android:text="@string/intent" />
+
+                <Button
+                    android:id="@+id/button10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginEnd="26dp"
+                    android:background="@drawable/bg"
+                    android:backgroundTint="@color/purple_200"
+                    android:text="@string/shared_preference" />
             </LinearLayout>
         </ScrollView>
 
