--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -65,6 +65,7 @@
                     android:entries="@array/logs"
                     />
             </LinearLayout>
+
             <Button
                 android:id="@+id/button3"
                 android:layout_width="match_parent"
@@ -74,7 +75,7 @@
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="70dp"
                 android:background="@drawable/bg"
-                android:text="@string/toast" />
+                android:text="@string/log" />
 
         </LinearLayout>
 
@@ -93,15 +94,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:text="@string/next_section"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
