--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,6 +110,17 @@
                     android:background="@drawable/bg"
                     android:backgroundTint="@color/purple_200"
                     android:text="@string/shared_preference" />
+
+                <Button
+                    android:id="@+id/button11"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginEnd="26dp"
+                    android:background="@drawable/bg"
+                    android:backgroundTint="@color/purple_200"
+                    android:text="@string/file_io" />
             </LinearLayout>
         </ScrollView>
 
