--- a/app/src/main/res/layout/activity_view_data.xml
+++ b/app/src/main/res/layout/activity_view_data.xml
@@ -5,14 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#210155"
-    tools:context=".FileIO.FileIOActivity">
+    tools:context=".FileIO.ViewDataActivity">
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/read_file"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/cardView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView3"
+        android:id="@+id/cardView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/card_bg"
         android:padding="20dp"
+        app:cardBackgroundColor="#00FFFFFF"
         app:cardCornerRadius="12dp"
         app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,35 +42,61 @@
             android:background="@drawable/card_bg"
             android:orientation="vertical">
 
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="4dp"
                 android:padding="8dp"
                 app:cardBackgroundColor="#00FFFFFF"
                 app:cardCornerRadius="5dp"
-                app:cardElevation="5dp">
+                app:cardElevation="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.40">
 
-                <EditText
-                    android:id="@+id/et_email"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:autofillHints=""
-                    android:background="@drawable/bg"
-                    android:ems="10"
-                    android:hint="@string/email"
-                    android:inputType="textEmailAddress"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
-                    android:textColor="@color/white" />
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginEnd="16dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tx1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="4"
+                        android:autofillHints=""
+                        android:background="@drawable/bg"
+                        android:ems="10"
+                        android:gravity="center_vertical"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:text="@string/email"
+                        android:textColor="?android:textColorHint"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/txtEmail"
+                        style="@style/Widget.MaterialComponents.Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="45dp"
+                        android:layout_weight="2"
+                        android:background="@drawable/bg"
+                        android:backgroundTint="@color/purple_500"
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:textSize="16sp" />
+                </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cardView2"
+                android:id="@+id/cardView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -70,23 +112,41 @@
                 app:layout_constraintTop_toBottomOf="@+id/cardView"
                 app:layout_constraintVertical_bias="0.0">
 
-                <EditText
-                    android:id="@+id/et_pass"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:autofillHints=""
-                    android:background="@drawable/bg"
-                    android:ems="10"
-                    android:hint="@string/password"
-                    android:inputType="textPassword"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
-                    android:textColor="@color/white"
-                    tools:ignore="DuplicateIds,LabelFor" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tx2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="4"
+                        android:autofillHints=""
+                        android:background="@drawable/bg"
+                        android:gravity="center_vertical"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:text="@string/password"
+                        android:textColor="?android:textColorHint"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/txtPass"
+                        style="@style/Widget.MaterialComponents.Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="45dp"
+                        android:layout_weight="2"
+                        android:background="@drawable/bg"
+                        android:backgroundTint="@color/purple_500"
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:textSize="16sp" />
+                </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <RadioGroup
-                android:id="@+id/radioGroup"
+                android:id="@+id/radioGroup2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -98,7 +158,7 @@
                 android:splitMotionEvents="true">
 
                 <RadioButton
-                    android:id="@+id/rb_internal"
+                    android:id="@+id/rb_internal2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -107,7 +167,7 @@
                     android:textColor="?android:textColorHint" />
 
                 <RadioButton
-                    android:id="@+id/rb_external"
+                    android:id="@+id/rb_external2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -126,6 +186,7 @@
                 android:orientation="horizontal"
                 android:visibility="gone">
 
+
                 <CheckBox
                     android:id="@+id/checkBoxFolder"
                     android:layout_width="wrap_content"
@@ -142,7 +203,6 @@
                     android:autofillHints=""
                     android:background="@drawable/bg"
                     android:ems="10"
-                    android:enabled="false"
                     android:hint="@string/name"
                     android:inputType="textPersonName"
                     android:paddingStart="10dp"
@@ -170,7 +230,7 @@
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/bg"
-                android:text="@string/save"
+                android:text="Read File"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
@@ -183,24 +243,11 @@
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="40dp"
                 android:background="@drawable/bg"
-                android:text="@string/view_data"
+                android:text="@string/back"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/save_file"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/cardView3"
-        app:layout_constraintEnd_toEndOf="@+id/cardView3"
-        app:layout_constraintStart_toStartOf="@+id/cardView3"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
